fix: Correción en repositorio de Sessiones que generaba una redundancia circular en el servicio de pacientes